Documenting modal opening
Former-commit-id: d1af9ccaf04f74c73b12b9cd88d75aef394a47a1

--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -1,4 +1,11 @@
 extends ../../index
 
 block doc-article
-  h2 Modals
+  :markdown
+    ## Modals
+
+    To open a modal, call the `k$.modal()` function.
+
+        k$('.mymodal').modal('open')
+
+    Note, the `open` parameter is optional as opening is the default.
