--- a/lib/sass/kickstart-semantic.sass
+++ b/lib/sass/kickstart-semantic.sass
@@ -1,3 +1,11 @@
+/*
+ *  Kickstart Semantic
+ *  ==================
+ *  This is just a starter file for using Kickstrap via Sass
+ *  Rename this file to something you like (e.g. style.sass) and import it by
+ *  the same .css name from your html/jade file.
+ */
+
 // Choose your theme
 @import themes/_default
 
