Trying to get phantomjs tests to run
Former-commit-id: 88c52cfdc64acd336842343616d46e29180692cc

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -3,6 +3,8 @@ extends ../layout
 block mainpane
 
 // TODO: Link to mocha and chai
+  script(src="../../node_modules/mocha/mocha.js")
+  script(src="../../node_modules/chai/chai.js")
 
   h3 Tests
   h4 Visual tests for Kickstart 3
