--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -1,20 +1,13 @@
-extends ../layout
+doctype html
+html(lang='en')
+  head
+    // TODO: Link to mocha and chai
+    // script(src="../../node_modules/mocha/mocha.js")
+    // script(src="../../node_modules/chai/chai.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/mocha/1.21.4/mocha.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/chai/1.9.1/chai.js")
+    
+  body
+    h1 Tests
 
-block mainpane
-
-// TODO: Link to mocha and chai
-  script(src="../../node_modules/mocha/mocha.js")
-  script(src="../../node_modules/chai/chai.js")
-
-  h3 Tests
-  h4 Visual tests for Kickstart 3
-
-  block test
-
-block sidebar
-  h3 Table of Contents
-  ul
-    li
-      a(href="/tests/buttons") buttons
-    li
-      a(href="/tests/navigation") navigation
+    block test
