about to make checkboxes on docs actually do something
Former-commit-id: 6bbd66ac33219ac45c0538230788bee4ebeef2a6

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -63,6 +63,15 @@ block container
   .row
     aside.sidebar
       section.meta
+        h1 View Options
+        form
+          label.checkbox
+            input#docs-semantic(type="checkbox" checked)
+            |  Advanced (semantic)
+          label.checkbox
+            input#docs-jquery(type="checkbox")
+            |  jQuery
+
         block meta
 
       section.toc
