--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -4,8 +4,18 @@ block doc-article
   :markdown
     ## Modals
 
-    To open a modal, call the `k$.modal()` function.
+    Turn any element into a modal using `k$.modal()`.
 
-        k$('.mymodal').modal('open')
+        // Instantiate and assign your modal in one line.
+        var $modal = k$.modal('.myModal')
+
+        // Define an action to show or hide the modal
+        $myButton = document.querySelector('.myButton');
+        $myButton.addEventListener('click', function() {
+
+          // Show the modal
+          $modal.style.display = 'block'
+
+        });
 
     Note, the `open` parameter is optional as opening is the default.
