--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -24,3 +24,4 @@ html(lang='en')
       script.
         hljs.initHighlightingOnLoad();
       script(src="/js/kickstart.js")
+      script(src="/js/docs.js")
