Checkboxes now control content, but JS needs to be dryer
Former-commit-id: 87d3cc39a957d4e98d5be0f823ef4f31934a5fef

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -32,3 +32,8 @@ block basic
         .signup {
           @include button();
         }
+
+  .if-jquery jQuery is on
+  .ifnot-jquery jQuery is off
+  .if-semantic Semantic is on
+  .ifnot-semantic Semantic is off
