--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -82,3 +82,6 @@ h1.example-
     +xs-heading
   &xxs
     +xxs-heading
+
+.if-jquery, .ifnot-jquery, .if-semantic, .ifnot-semantic
+  display: none
