Docs for modals and buttons
Former-commit-id: 4438b5a3ed3d36028f30a529dba3bbe98cc4c12f

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -91,6 +91,7 @@ block container
 
     main.mainpane
       section.basic#basic
+        h1 Basic Usage
         block basic
 
       section.variations#variations
