--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -15,7 +15,7 @@ block meta
 block basic
 
   p
-    | Turn any element into a modal using
+    | Turn any element into a modal using&nbsp;
     code k$.modal()
 
   p
@@ -27,20 +27,18 @@ block basic
     :markdown
       &nbsp;
 
-          // Define an action to show or hide the modal
-          $myButton = document.querySelector('#myButton');
-          $myButton.addEventListener('click', function() {
+          // Show modal
+          $signup.style.display = 'block'
 
-            // Show the modal
-            $signup.style.display = 'block'
-
-          });
+          // Hide modal
+          $signup.style.display = 'none'
 
   .if-jquery
     :markdown
       &nbsp;
 
-          // Now just show or hide it as you would any other element.
-          $('.myButton').click(function() {
-            $($signup).show();
-          });
+          // Show modal
+          $($signup).show();
+
+          // Hide modal
+          $($signup).hide();
