clicking on body hides modal
Former-commit-id: 855fcaea5c0e52a2edebab9102d6adb1151ac4f8

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -8,6 +8,9 @@ html(lang='en')
   body
     h1 Tests
 
+    #test-modal
+      h1 Hi, I'm a modal.
+
     footer
       script.
         mocha.setup('bdd');
