--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -10,6 +10,9 @@ html(lang='en')
 
     #test-modal
       h1 Hi, I'm a modal.
+      
+    #test-modal-2
+      h1 Hi, I'm a modal.
 
     footer
       script.
