--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -10,6 +10,7 @@
 @import components/_root-element
 @import components/_buttons
 @import components/_forms
+@import components/_modals
 @import components/_nav
 @import components/_progress
 @import components/_status
