--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -83,6 +83,12 @@ $default-line-height: 1.4rem
 =form-group()
   +form-group-default()
 
+// MODALS
+// ------
+
+=modal()
+  +modal-default()
+
 // NAVIGATION
 // ----------
 
