cleaning up a bit
Former-commit-id: aea89ce626017483ea1e17650521cc400b1adb88

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -95,7 +95,9 @@ block container
         block basic
 
       section.variations#variations
+        h1 Variations
         block variations
 
       section.granular#granular
+        h1 Granular
         block granular
