--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -14,9 +14,9 @@ block meta
         code modal()
 
 block basic
-  #sampleModal
+  #sampleModal.modal
     h1 I'm a modal!
-    
+
   h3 JavaScript
   p
     | Turn any element into a modal using&nbsp;
