--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -43,7 +43,10 @@ block basic
     as the navbar becomes more complex, such as the addition of a wrapper inside
     the container.
 
-    #### Combining with other elements
+
+block variations
+  :markdown
+    ### Combining with other elements
 
     Try mixing and matching with other elements, especially buttons and inputs.
 
@@ -67,13 +70,13 @@ block basic
           @include button();
         }
 
-  p.notice
+    p.notice
     | Don't forget to add&nbsp;
     pre
       code role="button"
 
   :markdown
-    #### Special uses
+    ### Full width
 
     A common layout is to use the navbar at the top of the page, full width,
     with a container. By itself, the left and right padding will prevent it from
@@ -117,6 +120,5 @@ block basic
     ### Breadcrumbs
 
     ### Pagination
-
 
 block postJS
