Refixing passed test
Former-commit-id: 313a81db1286a38333cd3e80fbe71aef15b219ce

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -15,9 +15,20 @@ html(lang='en')
             a#test-nav-submenu-link(href="#") Submenu
             ul#test-nav-submenu
               li
-                a(href="#") Submenu link 1
+                a(href="#") Submenu link 1.1
               li
-                a(href="#") Submenu link 2
+                a(href="#") Submenu link 1.2
+
+    .navbar#test-nav-2
+      nav
+        ul
+          li
+            a#test-nav-submenu-link-2(href="#") Submenu
+            ul#test-nav-submenu-2
+              li
+                a(href="#") Submenu link 2.1
+              li
+                a(href="#") Submenu link 2.2
 
     #test-modal
       h1 Hi, I'm a modal.
