Adding some more navigation tests
Former-commit-id: 7c8c66c5c11d47d026d992627530a5b339efb08a

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -18,17 +18,24 @@ html(lang='en')
                 a(href="#") Submenu link 1.1
               li
                 a(href="#") Submenu link 1.2
-
-    .navbar#test-nav-2
-      nav
-        ul
           li
-            a#test-nav-submenu-link-2(href="#") Submenu
+            a#test-nav-submenu-link-2(href="#") Submenu 2
             ul#test-nav-submenu-2
               li
                 a(href="#") Submenu link 2.1
               li
                 a(href="#") Submenu link 2.2
+
+    .navbar#test-nav-2
+      nav
+        ul
+          li
+            a#test-nav-submenu-link-3(href="#") Submenu 3
+            ul#test-nav-submenu-3
+              li
+                a(href="#") Submenu link 3.1
+              li
+                a(href="#") Submenu link 3.2
 
     #test-modal
       h1 Hi, I'm a modal.
