integrating nav js into actual docs
Former-commit-id: ec4078d1735a9cc28484c3597e1fb875d6fc990a

--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -101,3 +101,7 @@ block container
       section.granular#granular
         h1 Granular
         block granular
+
+block postJS
+  script.
+    k$.nav('.docs-nav')
