--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -12,6 +12,8 @@ html(lang='en')
       nav
         ul
           li
+            a(href="#") Just an average link
+          li
             a#test-nav-submenu-link(href="#") Submenu
             ul#test-nav-submenu
               li
