getting ready to style modals
Former-commit-id: afa1505482255f30aa3f12afe719558a52952685

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -42,6 +42,8 @@
         padding:
           top: (map-get($rootElement, paddingV) - 1)
           bottom: (map-get($rootElement, paddingV) - 1)
+        position: relative
+        cursor: pointer
 
         a:not([role=button])
           color: rgba(0, 0, 0, 0.5)
@@ -66,3 +68,4 @@
 
       ul
         display: none
+        position: absolute
