improving nav logic
Former-commit-id: 151932cd0259d66d19b327a28efa7f6b59ed599b

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -63,6 +63,9 @@
             background: $darkest-white
             border-color: $darkest-white
 
+          &.open
+            background: white
+
         a:not([role=button])
           color: rgba(0, 0, 0, 0.5)
           text-decoration: none
