I guess the navs are almost done. Going to add a font for the caret
Former-commit-id: da85c72ef33d5f5acea5ecfb68b0b74727f5076f

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -27,7 +27,7 @@ block basic
 
   .if-semantic
     :markdown
-      &nbsp;
+      <span>
 
           <button class="signup">Sign up</button>
 
@@ -37,6 +37,6 @@ block basic
 
   .ifnot-semantic
     :markdown
-      &nbsp;
+      <span>
 
           <button class="button">Sign up</button>
