--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -111,6 +111,7 @@ block basic
 
 block postJS
   script.
+    k$.nav('.docs-nav');
     $sampleModal = k$.modal('#sampleModal');
     k$.$('#launchSampleModal').addEventListener('click', function(e) {
       $sampleModal.style.display = 'block';
