--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -20,10 +20,10 @@
       margin: 0
 
     @if ($bleed-container)
-      ul:first-child
+      > ul:first-child
         margin-left: (-1 * map-get($rootElement, paddingH))
 
-      ul:last-child
+      > ul:last-child
         margin-right: (-1 * map-get($rootElement, paddingH))
 
     ul
@@ -65,6 +65,10 @@
 
           &.open
             background: white
+            border-color: $darker-white
+
+            &:hover
+              border-color: $darker-white
 
         a:not([role=button])
           color: rgba(0, 0, 0, 0.5)
@@ -90,3 +94,19 @@
       ul
         display: none
         position: absolute
+        background: white
+        top: 100%
+        left: -1px // Compensate for border
+        min-width: 175px
+        border:
+          left: 1px solid $darker-white
+          right: 1px solid $darker-white
+          bottom: 1px solid $darker-white
+
+        li
+          border: 0px
+
+          a:not([role=button])
+            padding:
+              top: $space/4
+              bottom: $space/4
