Adding arrow for nav bar
Former-commit-id: f99c962362169790bf8003007f2e1230cecc4fe0

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -50,9 +50,12 @@
           color: rgba(0, 0, 0, 0.5)
 
           &:after
-            content: '•'
+            content: '+'
+            font-family: 'Kickstart', Kickstart
             display: inline-block
             margin-left: 5px
+            font-size: 0.65rem
+            vertical-align: middle
 
           &:hover
             color: rgba(0, 0, 0, 0.85)
