--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -85,3 +85,7 @@ h1.example-
 
 .if-jquery, .ifnot-jquery, .if-semantic, .ifnot-semantic
   display: none
+
+.hero
+  ul, ul li
+    text-align: left
