Fixing something I thought I had already fixed
Former-commit-id: 3f99e2764601aafc8fbbd171758964aef2629cbb

--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -7,6 +7,7 @@ block hero-example
   .sample-nav.navbar
     nav
       ul
+        li Acme Enterprises
         li
           a(href="#") Home
         li
