--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -99,6 +99,7 @@
       ul
         display: none
         position: absolute
+        z-index: 10
         background: white
         top: 100%
         margin-top: 1px
