--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -3,7 +3,7 @@ html(lang='en')
   head
     link(rel="stylesheet" href="/css/docs.css")
     link(rel="stylesheet" href="/css/kickstart.css")
-    link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/tomorrow.min.css")
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
   body
     include _header
 
@@ -23,6 +23,7 @@ html(lang='en')
       block preJS
 
       script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
+      link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/tomorrow.min.css")
       script.
         hljs.initHighlightingOnLoad();
       script(src="/js/kickstart.js")
