No more old layout
Former-commit-id: ec9beb480ba2707ca92ae694ba294a23fcb42273

--- a/lib/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib/jade/docs/3.x/functions/throttling/index.jade
@@ -1,6 +1,10 @@
-extends ../../index
+extends ../../layout
 
-block doc-article
-  h2 Throttling
+block hero-title
+  h1 Throttling
+
+block basic
+
+block variations
   h3 Debouncer
   h3 Throttle
