--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -1,9 +1,10 @@
-extends ../index
+extends ../fullpage-layout
 
-block doc-article
+block hero-title
+  h1 Theming
+
+block fullPane
   :markdown
-    ## Theming
-
     Theming is design to be very straightforward in Kickstart as every component
     works like an extensible class.
 
