--- a/lib/jade/docs/3.x/ui/icons/index.jade
+++ b/lib/jade/docs/3.x/ui/icons/index.jade
@@ -1,11 +1,12 @@
-extends ../../index
+extends ../../fullpage-layout
 
-block doc-article
+block hero-title
+  h1 Icons
+
+block fullPane
   :markdown
-    ## Icons
-
     In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
     Icons are not part of the standard bundle for Kickstart.
-    
+
     I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
     project needs icons.
