--- a/lib/jade/docs/3.x/ui/notifications/index.jade
+++ b/lib/jade/docs/3.x/ui/notifications/index.jade
@@ -1,8 +1,9 @@
-extends ../../index
+extends ../../layout
 
-block doc-article
-  h2 Notifications
+block hero-title
+  h1 Notifications
 
-  h3 Statuses
+block variations
+  h2 Statuses
 
-  h3 Growls
+  h2 Growls
