--- a/lib/jade/docs/3.x/ui/tables/index.jade
+++ b/lib/jade/docs/3.x/ui/tables/index.jade
@@ -1,8 +1,9 @@
-extends ../../index
+extends ../../layout
 
-block doc-article
-  h2 Tables
+block hero-title
+  h1 Tables
 
+block hero-example
   table
     thead
       tr
