--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -1,9 +1,9 @@
-extends ../../index
+extends ../../layout
 
-block doc-article
-  h2 Tiles
+block hero-title
+  h1 Tiles
 
-  .example
-    .tile
-      h1 Hey, I'm a tile
-      p Sup.
+block hero-example
+  .tile
+    h1 Hey, I'm a tile
+    p Sup.
