--- a/lib/jade/docs/3.x/ui/typography/index.jade
+++ b/lib/jade/docs/3.x/ui/typography/index.jade
@@ -1,8 +1,9 @@
-extends ../../index
+extends ../../layout
 
-block doc-article
-  h2 Typography
+block hero-title
+  h1 Typography
 
+block basic
   p By default, the standard set of typography tags will look like this:
 
   .example
@@ -18,6 +19,7 @@ block doc-article
     p
       strong Strong
 
+block variations
   h2 Responsive
   p Font sizes and line-heights are set with responsive sizing based on the viewport width. Try changing the size of this screen or view on a different-sized screen for an example.
 
