--- a/lib/sass/components/_modals.sass
+++ b/lib/sass/components/_modals.sass
@@ -14,6 +14,7 @@
   animation-delay: 0.2s
   animation-timing-function: ease
   animation-fill-mode: both
+  z-index: 1000
 
   &[style="display: block;"]
     animation-name: fadeInDown
