--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -17,6 +17,13 @@ p
   margin: 0
     bottom: $space
 
+a
+  text-decoration: none
+  color: $blue
+
+  &:hover
+    text-decoration: underline
+
 =pre-default
   color: darken($blue, 25%)
   background-color: lighten($blue, 30%)
