--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -95,3 +95,15 @@ h1.example-
 .hero
   ul, ul li
     text-align: left
+
+  form, table, .tile
+    text-align: left
+    max-width: 360px
+    margin: 0px auto
+    color: $light-black
+
+  .tile
+    h1
+      color: $light-black
+      font-weight: 400
+      font-size: 1.1rem
