--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -13,6 +13,8 @@
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
+    text-decoration: none
 
   &:active
     +box-shadow(0px 3px 0px 0px rgba(0, 0, 0, 0.1) inset)
+    text-decoration: none
