--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -1,5 +1,6 @@
 =table-default
   border-collapse: collapse
+  background: white
   border-spacing: 0
   empty-cells: show
   border: 1px solid $light-gray
